--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,101 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
+.App-body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header {
+  align-items: center;
+  padding-bottom: 100px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Add a black background color to the top navigation */
+.topnav {
+  width: 100%;
+  //background-color: #333;
+  overflow: visible;
 }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: center;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 50px;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+h1 {
+ font-family: 'Lobster', Georgia, Times, serif;
+ font-size: 70px;
+ line-height: 100px;
+}
+
+p {
+ font-family: 'Cabin', Helvetica, Arial, sans-serif;
+ font-size: 25px;
+ line-height: 25px;
+}
+
+/* Style all font awesome icons */
+.fab {
+  padding: 20px;
+  font-size: 100px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* github */
+.fa-github {
+  color: grey;
+}
+
+ul {
+  position: relative;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 1.2em;
+}
+
+
+.tabul li {
+  padding-top: 20px;
+  padding-bottom: 20px
+}
+
+.tabul li a {
+  color: grey;
+}
+
+.Site-Tab-List button {
+  color: white;
+}
+
+
