--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,13 @@ ul {
 
 .Site-Tab-List button {
   color: white;
+  background-color: rgba(0,0,0,.25);
 }
 
+// get rid of firefox ugly dotted lines around buttons
+:focus {outline:none;}
+::-moz-focus-inner {border: 0;}
 
+.rwt__tab[aria-selected="true"] {
+  background-color: rgba(0,0,0,.35);
+}
